<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="253dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp">
        <ViewFlipper
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:flipInterval="2000"
            android:autoStart="true"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_splash"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_logo"/>
        </ViewFlipper>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/list_border"
        android:text="+91"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:autofillHints="true"
        android:textSize="20sp"
        android:background="@drawable/list_border"
        android:padding="10dp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/generate_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/otp"
            android:textColor="@color/white"
            android:background="@color/primaryColor"/>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/lang_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_eng"
        android:textColor="#007bff"
        android:clickable="true"
        android:focusable="true"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/lang_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_hi"
        android:textColor="#007bff"
        android:clickable="true"
        android:focusable="true"
        android:textSize="20sp"
        android:layout_marginBottom="18dp"/>

    <TextView
        android:id="@+id/lang_mr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_mr"
        android:textColor="#007bff"
        android:clickable="true"
        android:focusable="true"
        android:textSize="20sp" />

</LinearLayout>
